# agents-sync

./: .npmignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  action.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  language_support.yml
.github/workflows/: ci.yml
docs/: agents-md-spec.md  demo.tape  github-action.yml
docs/examples/: .clinerules  .cursorrules  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  copilot-instructions.md
scripts/: demo-setup.sh  demo.sh  record-demo.sh
skill/: SKILL.md
src/: cli.ts  server.ts
src/config/: loader.ts  schema.ts
src/derivers/: aider.ts  claude.ts  cline.ts  copilot.ts  cursor.ts  gemini.ts  index.ts  kiro.ts  merger.ts  roo.ts  trae.ts  windsurf.ts
src/extractor/: extractor.ts  schema.ts
src/generator/: agents-md.ts  validator.ts
src/lib/: claude-client.ts  errors.ts  file-utils.ts  spinner.ts  token-estimate.ts
src/scanner/: codegraph.ts  docs.ts  gotchas.ts  index.ts  manifest.ts  mcp.ts  repomix.ts  skills.ts  source.ts  structure.ts
src/snapshot/: drift.ts  schema.ts  writer.ts
src/templates/: index.ts
src/tools/: check-spec.ts  derive.ts  drift.ts  export.ts  init.ts  install-hook.ts  lint.ts  load-context.ts  scan-report.ts  status.ts  sync.ts  validate.ts
tests/fixtures/django/: README.md  pyproject.toml
tests/fixtures/django/app/: models.py  views.py
tests/fixtures/rust-cli/: Cargo.toml  README.md
tests/fixtures/rust-cli/src/: main.rs
tests/unit/: drift.test.ts  (+17 more)
(+26 files in other folders)
